--- a/rest_mvc_boilerplate-service/src/main/resources/messages/messages.properties
+++ b/rest_mvc_boilerplate-service/src/main/resources/messages/messages.properties
@@ -1,3 +1,5 @@
+default.not_found=Unable to load {0} with id {1}, {0} not found.
+customer.not_found=Unable to load customer with id {0}, customer not found.
 user.not_found=Unable to load user with id {0}, user not found.
 user.not_found.by_email=Unable to load user with email {0}, user not found.
 user.unable_to_create=Unable to create user.
